[package]
name = "tree-sitter-aria"
description = "Tree Sitter parser for the Aria lang"
version = "0.1.0"
authors = ["Borja Castellano <borjacastellano1@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "aria"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://www.github.com/zocolini/tree-sitter-aria"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
