[build-system]
requires = ["setuptools>=62.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-aria"
description = "Tree Sitter parser for the Aria lang"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "aria"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Borja Castellano", email = "borjacastellano1@gmail.com" }]
requires-python = ">=3.10"
license.text = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://www.github.com/zocolini/tree-sitter-aria"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
